P2H-2 #comment added data input boxes for the form

--- a/Hobby-project.html
+++ b/Hobby-project.html
@@ -42,6 +42,39 @@
             </div>
           </div>
 
+          <!-- Song name input -->
+          <div class="col-md-4">
+            <div class="title">
+              <label for="title" class="form-label">Title</label>
+              <input type="text" class="form-control" id="title" />
+            </div>
+          </div>
+
+          <!-- Album name input -->
+          <div class="row mb-3">
+              <div class="col-md-4">
+                <div class="albumName">
+                  <label for="albumName" class="form-label">Album name</label>
+                  <input type="text" class="form-control" id="albumName" />
+                </div>
+              </div>
+
+              <!-- Genre input-->
+              <div class="col-md-4">
+                <div class="genre">
+                  <label for="genre" class="form-label">Genre name</label>
+                  <input type="text" class="form-control" id="genre" />
+                </div>
+              </div>
+
+              <!-- Release date input -->
+              <div class="row mb-3">
+                  <div class="col-sm-2">
+                    <div class="releaseDate">
+                      <label for="releaseDate" class="form-label">Release date</label>
+                      <input type="date" class="form-control" id="releaseDate" />
+                    </div>
+                  </div>
 
 
 </body>
