--- a/Hobby-project.html
+++ b/Hobby-project.html
@@ -75,6 +75,10 @@
                       <input type="date" class="form-control" id="releaseDate" />
                     </div>
                   </div>
+                  <!-- Add to playlist button -->
+                  <div class="row mb-3"></div>
+                  <div class="col-sm-3">
+                    <button type="submit" class="btn btn-warning btn-block mb-3">Add to playlist</button>
 
 
 </body>
