P2H-2 #comment added a delete song function

--- a/Hobby-project.html
+++ b/Hobby-project.html
@@ -79,7 +79,16 @@
                   <div class="row mb-3"></div>
                   <div class="col-sm-3">
                     <button type="submit" class="btn btn-warning btn-block mb-3">Add to playlist</button>
-
+                  </form>
+                  <!-- Delete a song form -->
+                  <section>
+                    <h2>Delete a song</h2>
+                    <form id="deleteForm">
+                      <label for="songId">Id:</label>
+                      <input type="text" name="songId" id="songId">
+                      <button type="submit" class="btn btn-warning btn-block mb-5">Delete</button>
+                    </form>
+              
 
 </body>
 
