P2H-2 #comment aadded a search bar function

--- a/Hobby-project.html
+++ b/Hobby-project.html
@@ -88,6 +88,35 @@
                       <input type="text" name="songId" id="songId">
                       <button type="submit" class="btn btn-warning btn-block mb-5">Delete</button>
                     </form>
+                    
+<!-- search bar -->
+      <h2>Search for a song</h2>
+      <form id="findSongForm">
+        <label for="artistId">Artist:</label>
+        <input type="text" name="artistId" id="artistId">
+        <label for="titleId">Title:</label>
+        <input type="text" name="titleId" id="titleId">
+        <label for="albumId">Album:</label>
+        <input type="text" name="albumId" id="albumId">
+        <label for="genreId">Genre:</label>
+        <input type="text" name="genreId" id="genreId">
+        <label for="releaseDateId">Release Date:</label>
+        <input type="date" name="releaseDateId" id="releaseDateId">
+        <button type="submit" class="btn btn-warning btn-block mb-5">Search</button>
+      </form>
+    </section>
+    <section>
+      <h2>Search Results</h2>
+      <div id="getOutput2">
+        <div id="getOutput3">
+          <div id="getOutput4">
+            <div id="getOutput5">
+              <div id="getOutput6"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
               
 
 </body>
